--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <!-- title and favicon -->
     <title>Web App</title>
     <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
-
+    <!-- supabase -->
+    <script
+    defer
+    src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"></script>
     <!-- js -->
     <script type="module" src="app.js"></script>
 
@@ -31,7 +34,15 @@
     </header>
 
     <main>
-
+        <section>
+            <form>
+                <input/>
+                <button>submit</button>
+            </form>
+        </section>
+        <section class="beanie-baby-container">
+            <ul class="beanie-baby-card"></ul>
+        </section>
     </main>
 
 </body>
