renderOptions makes dynamic options for select based on theme name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <main>
         <section>
             <form>
-                <input/>
+                <label>Search Beanie Babies by Theme</label>
+                <select id="beanie-select"></select>
                 <button>submit</button>
             </form>
         </section>
