--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <section>
-            <form>
+            <form id="beanie-form">
                 <label>Search Beanie Babies by Theme</label>
                 <select id="beanie-select"></select>
                 <button>submit</button>
